--- a/account-notifications.html
+++ b/account-notifications.html
@@ -674,7 +674,7 @@
                                                     marketing emails
                                                   </div>
                                                 </div>
-                                                <div class="page-shell-mobile__container-ml-16">
+                                                <div class="_1mqc21n">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="undefinedEMAIL-row-title"
@@ -2395,7 +2395,7 @@
                             Email
                           </div>
                         </div>
-                        <div class="page-shell-mobile__container-ml-16">
+                        <div class="_1mqc21n">
                           <button
                             aria-checked="true"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
@@ -2444,7 +2444,7 @@
                             SMS
                           </div>
                         </div>
-                        <div class="page-shell-mobile__container-ml-16">
+                        <div class="_1mqc21n">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
@@ -2474,7 +2474,7 @@
                             Phone calls
                           </div>
                         </div>
-                        <div class="page-shell-mobile__container-ml-16">
+                        <div class="_1mqc21n">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
@@ -2504,7 +2504,7 @@
                             Browser notifications
                           </div>
                         </div>
-                        <div class="page-shell-mobile__container-ml-16">
+                        <div class="_1mqc21n">
                           <button
                             aria-checked="false"
                             aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
@@ -2545,7 +2545,7 @@
                 role="dialog"
                 aria-label="Are you sure?"
                 aria-modal="true"
-                class="_1ucy1zjv"
+                class="modal-dialog__content-wrapper"
                 style="position: relative"
               >
                 <div class="modal__close">
@@ -2572,7 +2572,7 @@
                     ></span>
                   </button>
                 </div>
-                <header class="_1youxq0">
+                <header class="modal__header-container">
                   <div class="modal__header-wrapper"></div>
                   <div class="modal__heading">
                     <h1
@@ -2580,7 +2580,7 @@
                       class="heading"
                       elementtiming="LCP-target"
                     >
-                      <div class="_1q9sh65">Are you sure?</div>
+                      <div class="modal__header-text">Are you sure?</div>
                     </h1>
                   </div>
                   <div class="modal__heading-wrapper"></div>
