--- a/basics.html
+++ b/basics.html
@@ -848,7 +848,7 @@
                                         have a confirmation code
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__container-ml-16">
+                                    <div class="_1mqc21n">
                                       <button
                                         aria-checked="false"
                                         aria-labelledby="partner-switch-row-title"
@@ -955,7 +955,7 @@
           role="dialog"
           aria-label="Select primary language"
           aria-modal="true"
-          class="_1ucy1zjv"
+          class="modal-dialog__content-wrapper"
           style="position: relative"
         >
           <div class="modal__close">
@@ -983,11 +983,11 @@
               </span>
             </button>
           </div>
-          <header class="_1youxq0">
+          <header class="modal__header-container">
             <div class="modal__header-wrapper"></div>
             <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
-                <div class="_1q9sh65">
+                <div class="modal__header-text">
                   <span id="primary-language-group-label"
                     >Select primary language</span
                   >
@@ -1157,13 +1157,13 @@
     >
       <div
         class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
-        class="_1ucy1zjv"
+        class="modal-dialog__content-wrapper"
       >
         <div
           role="dialog"
           aria-label="Select additional languages"
           aria-modal="true"
-          class="_1ucy1zjv"
+          class="modal-dialog__content-wrapper"
           style="position: relative"
         >
           <div class="modal__close">
@@ -1191,11 +1191,11 @@
               </span>
             </button>
           </div>
-          <header class="_1youxq0">
+          <header class="modal__header-container">
             <div class="modal__header-wrapper"></div>
             <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
-                <div class="_1q9sh65">
+                <div class="modal__header-text">
                   <span id="additional-languages-group-label"
                     >Select additional languages</span
                   >
