--- a/personal-info.html
+++ b/personal-info.html
@@ -8464,7 +8464,7 @@
                 role="dialog"
                 aria-label="Are you sure you want to remove your ID?"
                 aria-modal="true"
-                class="_1ucy1zjv"
+                class="modal-dialog__content-wrapper"
                 style="position: relative"
               >
                 <div class="modal__close">
