--- a/profile.html
+++ b/profile.html
@@ -3240,7 +3240,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                 role="dialog"
                 aria-label="Identity verification"
                 aria-modal="true"
-                class="_1ucy1zjv"
+                class="modal-dialog__content-wrapper"
                 style="position: relative"
               >
                 <div class="modal__close">
@@ -3267,7 +3267,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                     ></span>
                   </button>
                 </div>
-                <header class="_1youxq0">
+                <header class="modal__header-container">
                   <div class="modal__header-wrapper"></div>
                   <div class="modal__heading">
                     <h1
@@ -3275,7 +3275,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                       class="heading"
                       elementtiming="LCP-target"
                     >
-                      <div class="_1q9sh65">Identity verification</div>
+                      <div class="modal__header-text">Identity verification</div>
                     </h1>
                   </div>
                   <div class="modal__heading-wrapper"></div>
