--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1219,7 +1219,7 @@
               role="dialog"
               aria-label="Select a theme"
               aria-modal="true"
-              class="_1ucy1zjv"
+              class="modal-dialog__content-wrapper"
               style="position: relative"
             >
               <div class="modal__close">
@@ -1251,7 +1251,7 @@
                 <div class="modal__header-wrapper"></div>
                 <div class="modal__heading">
                   <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
-                    <div class="_1q9sh65">Select a theme</div>
+                    <div class="modal__header-text">Select a theme</div>
                   </h1>
                 </div>
                 <div class="modal__heading-wrapper"></div>
