--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -549,7 +549,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="page-shell-mobile__container-ml-16">
+                                  <div class="_1mqc21n">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         type="checkbox"
