--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1156,7 +1156,7 @@
                                           Parents can bring kids under 2 years
                                         </div>
                                       </div>
-                                      <div class="page-shell-mobile__container-ml-16">
+                                      <div class="_1mqc21n">
                                         <span class="explore-filter-menu__list-content"
                                           ><input
                                             aria-labelledby="guest_requirements_infant_can_attend-row-title"
@@ -1209,7 +1209,7 @@
                                                 guests on your experience.
                                               </div>
                                             </div>
-                                            <div class="page-shell-mobile__container-ml-16">
+                                            <div class="_1mqc21n">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4804-row-title"
@@ -1256,7 +1256,7 @@
                                                 equipment you provide.
                                               </div>
                                             </div>
-                                            <div class="page-shell-mobile__container-ml-16">
+                                            <div class="_1mqc21n">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4802-row-title"
@@ -1293,7 +1293,7 @@
                                                 Other accessibility features
                                               </div>
                                             </div>
-                                            <div class="page-shell-mobile__container-ml-16">
+                                            <div class="_1mqc21n">
                                               <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4805-row-title"
