--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1311,7 +1311,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             Ex: My living room or backyard
                                           </div>
                                         </div>
-                                        <div class="page-shell-mobile__container-ml-16">
+                                        <div class="_1mqc21n">
                                           <input
                                             aria-labelledby="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Indoors or on my personal property-row-subtitle"
@@ -1351,7 +1351,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             attraction
                                           </div>
                                         </div>
-                                        <div class="page-shell-mobile__container-ml-16">
+                                        <div class="_1mqc21n">
                                           <input
                                             aria-labelledby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-subtitle"
